--- a/styles/home.css
+++ b/styles/home.css
@@ -10,3 +10,11 @@
   align-items: center;
   padding: 1rem;
 }
+
+.navContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  list-style: none;
+}
