--- a/styles/home.css
+++ b/styles/home.css
@@ -9,6 +9,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  background-color: #333333;
+  /* left: 0;
+  right: 0;
+  position: fixed; */
+}
+
+.topContainer h1 {
+  color: white;
+  font-size: 1.5em;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .navContainer {
@@ -17,4 +27,9 @@
   align-items: center;
   gap: 10px;
   list-style: none;
+}
+
+.contentContainer {
+  max-width: 960px;
+  margin: 0 auto;
 }
