--- a/styles/home.css
+++ b/styles/home.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1.5rem;
   background-color: #333333;
   /* left: 0;
   right: 0;
@@ -29,7 +29,53 @@
   list-style: none;
 }
 
+.navContainer li a {
+  text-decoration: none;
+  color: white;
+  font-size: x-large;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .contentContainer {
   max-width: 960px;
   margin: 0 auto;
+  min-height: 100vh;
+  background-color: #4444bb;
+}
+
+.contentContainer main img {
+  width: 350px;
+  height: 400px;
+}
+
+main {
+  display: flex;
+  padding: 1.5rem;
+  gap: 1rem;
+}
+
+main img {
+  order: 3;
+}
+
+.missionStatement {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+.missionStatement h2 {
+  font-size: 2.5em;
+  color: white;
+  font-weight: b;
+}
+.missionStatement p {
+  color: white;
+  font-size: 1.5em;
+}
+
+div .quote {
+  font-family: cursive;
+  font-size: 2.5rem;
+  text-align: center;
+  color: white;
 }
