--- a/styles/home.css
+++ b/styles/home.css
@@ -12,7 +12,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem;
+  padding: 1.8rem 1.5rem;
   background-color: #721313;
   box-shadow: 0 0 12px -2px black;
   left: 0;
@@ -52,7 +52,9 @@ html {
 
 .contentContainer main img {
   width: 350px;
-  height: 400px;
+  height: 350px;
+  border-radius: 15px;
+  box-shadow: 0 0 12px -2px black;
 }
 
 main {
@@ -69,7 +71,7 @@ main img {
 .missionStatement {
   display: flex;
   flex-direction: column;
-  gap: 2em;
+  gap: 1.5em;
 }
 .missionStatement h2 {
   font-size: 2.5em;
@@ -86,4 +88,15 @@ div .quote {
   font-size: 2.5rem;
   text-align: center;
   color: white;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  background-color: #721313;
+  box-shadow: 0 0 12px -2px black;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
 }
