--- a/styles/about.css
+++ b/styles/about.css
@@ -56,8 +56,12 @@ main {
 }
 
 .contentContainer section img {
-  height: 300px;
-  width: 300px;
+  height: 200px;
+  width: 200px;
+  border-radius: 15px;
+  margin-left: 10px;
+  margin-bottom: 1.3rem;
+  box-shadow: 0 0 12px -2px black;
 }
 
 .bodyTitle {
@@ -65,10 +69,23 @@ main {
   font-weight: 300;
   font-size: 1.8rem;
   margin-bottom: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .activitySection {
   display: flex;
   border-top: 1px solid white;
-  padding-top: 1rem;
+  padding-top: 1.3rem;
+}
+
+.activitySection h2 {
+  color: white;
+  font-size: 1.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.activitySection p {
+  color: white;
+  margin: 1rem 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
