--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,3 +54,19 @@ main {
   padding: 1.5rem;
   padding-top: 7em;
 }
+
+.contentContainer section img {
+  height: 200px;
+  width: 200px;
+  border-radius: 15px;
+  box-shadow: 0 0 12px -2px black;
+}
+
+.projectSection {
+  background-color: #721313;
+  border-radius: 15px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+}
