--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -64,9 +64,37 @@ main {
 
 .projectSection {
   background-color: #721313;
-  border-radius: 15px;
+  border-radius: 10px;
   padding: 1rem;
   margin-bottom: 1rem;
   display: flex;
+  justify-content: space-between;
   gap: 1rem;
+}
+.projectSubSection {
+  max-width: 73%;
+}
+
+.contentContainer main h2 {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.mainHeader {
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: xx-large;
+}
+
+.projectTitles {
+  margin-bottom: 0.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: x-large;
+  border-bottom: 1px solid white;
+  padding-bottom: 0.3rem;
+}
+
+p {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
