--- a/styles/about.css
+++ b/styles/about.css
@@ -12,7 +12,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.8rem 1.5rem;
+  padding: 1.5rem 1.5rem;
   background-color: #721313;
   box-shadow: 0 0 12px -2px black;
   left: 0;
@@ -95,4 +95,20 @@ main {
 
 .activityInfo {
   max-width: 70%;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  background-color: #721313;
+  box-shadow: 0 0 12px -2px black;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  padding: 0.8rem;
+}
+
+footer img {
+  height: 50px;
 }
