--- a/styles/home.css
+++ b/styles/home.css
@@ -12,7 +12,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.8rem 1.5rem;
+  padding: 1.5rem 1.5rem;
   background-color: #721313;
   box-shadow: 0 0 12px -2px black;
   left: 0;
@@ -88,7 +88,7 @@ main img {
 .quoteContainer {
   display: flex;
   align-items: center;
-  min-height: 40vh;
+  min-height: 35vh;
 }
 
 div .quote {
@@ -107,4 +107,9 @@ footer {
   right: 0;
   bottom: 0;
   position: fixed;
+  padding: 0.8rem;
+}
+
+footer img {
+  height: 50px;
 }
