--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,7 +12,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.8rem 1.5rem;
+  padding: 1.5rem 1.5rem;
   background-color: #721313;
   box-shadow: 0 0 12px -2px black;
   left: 0;
@@ -53,7 +53,7 @@ html {
 
 main {
   padding: 1.5rem;
-  padding-top: 7em;
+  padding-top: 6em;
 }
 
 .contentContainer section img {
@@ -99,4 +99,20 @@ p {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  background-color: #721313;
+  box-shadow: 0 0 12px -2px black;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  padding: 0.8rem;
+}
+
+footer img {
+  height: 50px;
 }
