--- a/styles/home.css
+++ b/styles/home.css
@@ -93,9 +93,14 @@ main img {
 
 div .quote {
   font-family: cursive;
+  font-style: italic;
   font-size: 2.5rem;
   text-align: center;
   color: white;
+}
+span {
+  font-size: 2rem;
+  font-style: normal;
 }
 
 footer {
