--- a/styles/contact.css
+++ b/styles/contact.css
@@ -55,10 +55,28 @@ main {
   padding: 1.5rem;
   padding-top: 7em;
   gap: 1rem;
+  width: 85%;
+  margin: 0 auto;
 }
+
 label {
   display: block;
 }
+
+.nameContainer {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.nameContainer div {
+  width: 50%;
+}
+
+.nameContainer input {
+  width: 100%;
+}
+
 footer {
   text-align: center;
   color: white;
