--- a/styles/contact.css
+++ b/styles/contact.css
@@ -51,16 +51,35 @@ html {
   padding-bottom: 3em;
 }
 
-main {
+form {
   padding: 1.5rem;
   padding-top: 7em;
   gap: 1rem;
-  width: 85%;
+  width: 80%;
   margin: 0 auto;
 }
 
+h2 {
+  margin-bottom: 4rem;
+  color: white;
+}
+input {
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
 label {
   display: block;
+  margin-bottom: 0.5rem;
+}
+
+button {
+  width: 100%;
+  padding: 1rem;
+  margin-top: 1rem;
+}
+
+.contactHeader {
+  text-align: center;
 }
 
 .nameContainer {
