--- a/styles/contact.css
+++ b/styles/contact.css
@@ -45,7 +45,7 @@ html {
 .contentContainer {
   max-width: 960px;
   margin: 0 auto;
-  min-height: 100vh;
+  min-height: 92vh;
   background-color: #353592;
   box-shadow: 0 0 12px -2px black;
   padding-bottom: 3em;
@@ -60,24 +60,39 @@ form {
 }
 
 h2 {
-  margin-bottom: 4rem;
+  margin-bottom: 3.5rem;
   color: white;
+  font-size: xx-large;
+  font-weight: 550;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 input {
   padding: 0.5rem;
   margin-bottom: 0.5rem;
 }
+
 label {
   display: block;
   margin-bottom: 0.5rem;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
   width: 100%;
   padding: 1rem;
   margin-top: 1rem;
+  font-size: large;
+  background-color: #721313;
+  color: white;
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
+button:hover {
+  background-color: #550c0c;
+}
 .contactHeader {
   text-align: center;
 }
@@ -96,15 +111,36 @@ button {
   width: 100%;
 }
 
+.personalContactBox {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.personalContactBox div {
+  width: 50%;
+}
+
+.personalContactBox input {
+  width: 100%;
+}
+
+.messageContainer textarea {
+  width: 100%;
+  padding: 0.5rem;
+  color: #888;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 footer {
   text-align: center;
   color: white;
   background-color: #721313;
   box-shadow: 0 0 12px -2px black;
-  left: 0;
+  /* left: 0;
   right: 0;
   bottom: 0;
-  position: fixed;
+  position: fixed; */
   padding: 0.8rem;
 }
 
