--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -107,6 +107,13 @@ p {
   border-bottom: 1px solid #c0c0c0;
 }
 
+.hamburger-icon {
+  display: none;
+  width: 2rem;
+  height: auto;
+  cursor: pointer;
+}
+
 footer {
   text-align: center;
   color: white;
@@ -138,5 +145,14 @@ footer img {
   }
   img {
     order: 1;
+  }
+  .navContainer {
+    display: none;
+  }
+  .hamburger-icon {
+    display: block;
+    top: 0.5rem;
+    right: 1rem;
+    color: white;
   }
 }
