--- a/styles/about.css
+++ b/styles/about.css
@@ -111,6 +111,13 @@ footer {
 .active {
   border-bottom: 1px solid #c0c0c0;
 }
+
+.hamburger-icon {
+  display: none;
+  width: 2rem;
+  height: auto;
+  cursor: pointer;
+}
 footer img {
   height: 50px;
 }
@@ -130,5 +137,14 @@ footer img {
   }
   footer {
     position: relative;
+  }
+  .navContainer {
+    display: none;
+  }
+  .hamburger-icon {
+    display: block;
+    top: 0.5rem;
+    right: 1rem;
+    color: white;
   }
 }
